less/style.less
/* ... */
@media only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-devicepixel-ratio: 1.5), only screen and (min-resolution: 1.5dppx) {
  #social {
    background: url('/assets/images/android2x.png') no-repeat left bottom;
    background-size: contain;
  }
}
@media print {
  body {
    font-size: 0.75em;
  }
  #header, #social, .share-buttons, #info, #responsive-home-page-bottom-ad, #responsive-post-bottom-ad, .side, #copyright {
    display: none;
  }
  .post-pagination {
    visibility: hidden;
    page-break-after: always;
  }
}
html {
  -webkit-text-size-adjust: none;
}
.body {
  max-height: 999999px; // Arbitrarily large number.
}

